--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Custom Button Style"
-        android:textSize="30sp"
+        android:text="Notification Example"
+        android:textSize="30dp"
         android:id="@+id/textView"
         android:layout_marginTop="65dp"
         android:layout_alignParentTop="true"
@@ -34,24 +34,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Android Practice "
-        android:textSize="30sp"
+        android:textSize="30dp"
         android:layout_below="@id/textView"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
         android:id="@+id/textView2"
         />
 
     <Button
-        android:text="New Button"
-        style="@style/Widget.AppCompat.ImageButton"
+        android:text="Notification"
+        android:layout_marginTop="62dp"
         android:layout_below="@+id/imageButton2"
-        android:layout_alignLeft="@+id/imageButton2"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2"
+
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+      />
 
 
 </RelativeLayout>
